Edit current weather card style to wrap correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -313,7 +313,6 @@ input[type="text"] {
 .main-container {
   padding: 0 20px;
   width: 100%;
-  min-width: 100px;
   background-color: var(--color-light-cyan);
   display: grid;
   grid-template-columns: minmax(100px, 1160px);
@@ -325,10 +324,10 @@ input[type="text"] {
 /* Contains all cards*/
 .weather-cards {
   width: 100%;
-  margin: 20px 0;
+  margin: 20px 0px;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
 }
 
@@ -375,7 +374,7 @@ input[type="text"] {
 }
 
 .card .card-body {
-  padding: 10px 25px 18px;
+  padding: 10px 20px 18px;
 }
 
 .card .icon {
@@ -428,8 +427,8 @@ input[type="text"] {
 }
 
 .card.current-weather .icon {
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   background-color: aquamarine;
   border-radius: 50%;
 }
@@ -437,8 +436,8 @@ input[type="text"] {
 .card.current-weather .card-body {
   display: flex;
   flex-direction: row;
-  /* flex-wrap: wrap; */
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   gap: 20px;
 }
@@ -506,7 +505,7 @@ input[type="text"] {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  /* gap: 20px; */
+  gap: 5px;
 }
 
 .card.current-weather .card-body .card-right > div > span:first-child {
@@ -616,7 +615,7 @@ input[type="text"] {
   padding: 5px 5px;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 5fr 1fr;
   width: 100%;
   align-items: center;
   justify-content: space-between;
